
2008-02-06 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* Rewrote Peter Hartley's patch to include a new extra header field in
	FileInfo.

*******************************************************************************
Version 1.6.7
*******************************************************************************

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* The scope of the macro NUM_HANDLE is now restricted to upnpapi.c.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* InitHandleList() has never been implemented, I guess no one has ever
	called it, so remove it.
	* GetFreeHandle() and FreeHandle() are now static as they should.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* New internal buffer added to store global/ula IPV6 address.
	* Macros to test whether an IPV6 address is global or ula.
	* UpnpGetServerUlaGuaIp6Address(): added interface.
	* IN6_IS_ADDR_GLOBAL, IN6_IS_ADDR_ULA: new macros.
	* gIF_IPV6_ULA_GUA: new buffer.
	* UpnpRegisterRootDevice3(): Change to the test of already registered
	devices for IPV6.
	* UpnpGetIfInfo(): gua/ula issues.
	
	Patch submitted by Ronan Menard.

2010-08-19 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* libUPnP does support IPV6 now.
	
	Patch submitted by Ronan Menard.

2010-08-19 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* HTTP version equal to 1.0 should fail as required by the UPnP
	certification tool. Patch submitted by Ronan Menard.

2010-06-28 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	SF Bug Tracker [ 3022490 ] String declaration fix for patch applied in 3007407
	Hello,

	When my patch for tracker ID 3007407 was accepted, the definition of the
	serviceList string was changed from

	#define SERVICELIST_STR "serviceList"

	to

	static const char *SERVICELIST_STR = "serviceList";

	During internal code review of the final patch, it was pointed out that 
	sizeof(SERVICELIST_STR) == 4 since SERVICELIST_STR is now declared as